--- a/aidlclient/src/main/res/layout/activity_main.xml
+++ b/aidlclient/src/main/res/layout/activity_main.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
 
-   <Button
+   <TextView
+       android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:id="@+id/btn"
-       android:text="获取"
+       android:hint="这里会显示服务器回来的信息"
        />
+   <Button
+       android:id="@+id/btn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="获取简单数据"
+      />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn2"
+        android:text="获取复杂数据"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text2"
+        />
 
-</android.support.constraint.ConstraintLayout>
+
+
+</LinearLayout>
